# rasterizer

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  rocprofv3.yaml
docker/: Dockerfile.amd  Dockerfile.nvidia  build_nvidia.sh
src/: app.cpp  app.hpp  device_buffer.hpp  hip_util.hpp  main.cpp  main.hip  mesh.cpp  mesh.hpp  obj_mesh.cpp  obj_mesh.hpp  pipeline.cpp  pipeline.hip  pipeline.hpp  util.hpp
